[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features= ["v4"]}

[[bin]]
name = "echo"

[[bin]]
name = "broadcast"

[[bin]]
name = "id"

[[bin]]
name = "g-counter"
